# live-unite-tools

./: .aiexclude  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  vcpkg-configuration.json  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: build-project.yaml  my-astro.yml  my-issue-first-responder.yaml  my-testing.yaml  pr-pull.yaml  push.yaml
data/browser/: particles.html  tsparticles.bundle.js
data/defaults/: default.json
data/effect/: main.effect
data/locale/: en-US.ini  ja-JP.ini
data/models/: ContextClassifier.ncnn.param
docs/: package-lock.json  package.json
docs/src/layouts/: Layout.astro  MarkdownLayout.astro
docs/src/lib/: github.ts
docs/src/pages/: index.astro
src/: MainPluginContext.cpp  plugin-main.c
src/BridgeUtils/: AsyncTextureReader.hpp  GsUnique.hpp  ILogger.hpp  ObsLogger.hpp
src/Core/: MainEffect.hpp  MainPluginContext.cpp  MainPluginContext.h  MainPluginContext_c.cpp  PluginConfig.hpp  RenderingContext.cpp  RenderingContext.hpp
src/EfficientNet/: ContextClassifier.hpp  EfficientNet.cpp  EfficientNet.hpp
src/TesseractReader/: MatchTimerReader.cpp  MatchTimerReader.hpp
src/UpdateChecker/: UpdateChecker.hpp
src/WebSocketServer/: IWebSocketSender.hpp  WebSocketSender.cpp  WebSocketSender.hpp  WebSocketServer.cpp  WebSocketServer.hpp
vcpkg-overlay-ports/leptonica/: portfile.cmake  vcpkg.json
vcpkg-overlay-ports/tesseract/: portfile.cmake
